fixed showroom html

--- a/html/showroom.html
+++ b/html/showroom.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Office - MokeSell</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/showroom.css">
+    <title>Checkout - MokeSell</title>
+    <!--importing existing styles-->
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <!--google font-->
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;500&display=swap" rel="stylesheet">
+    <!--external libraries-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.14/lottie.min.js"></script>
 </head>
 <body>
     <header class="header">
@@ -22,25 +25,45 @@
                 <button class="menu-btn" id="openSidebarButton">☰</button>
                 <!--logo-->
                 <div class="logo">
-                    <a href="index.html"><img src="images/others/mokesell-logo.png" alt="mokesell logo"></a>
+                    <a href="index.html"><img src="../images/others/mokesell-logo.png" alt="mokesell logo"></a>
                 </div>
                 <!--search bar-->
                 <div class="search-container">
-                    <img src="images/icons/search-icon.png" alt="search icon" id="search-icon">
+                    <img src="../images/icons/search-icon.png" alt="search icon" id="search-icon">
                     <input type="search" id="search-bar" placeholder="Search for products ...">
                     <ul id="suggestions-list" class="suggestions-list"></ul>
                 </div>
-                <!--right buttons-->
+                <!--right buttons--> 
                 <div class="nav-buttons">
                     <a href="#">
                         <button class="sell-button">Sell an item</button>
                     </a>
-                    <a href="#" class="auth-button">Sign in</a>
-                    <a href="#" class="auth-button">Sign up</a>
-                    <a href="#" class="cart-icon">
-                        <img src="images/icons/cart-icon.png" alt="cart icon">
-                        <span class="cart-badge">0</span>
-                    </a>
+                    <div id="guestNav">
+                        <button class="auth-button" id="navSignIn">Sign in</button>
+                        <button class="auth-button" id="navSignUp">Sign up</button>
+                        <a href="#" class="nav-icon">
+                            <img src="../images/icons/cart-icon.png" alt="cart icon">
+                            <span class="cart-badge">0</span>
+                        </a>
+                    </div>
+                    <div id="userNav">
+                        <div class="profile-container">
+                            <a href="#" class="nav-icon">
+                                <img src="../images/icons/favourites-icon.png" id="favouritesIcon" alt="favourites icon">
+                            </a>
+                            <a href="#" class="nav-icon">
+                                <img src="../images/icons/cart-icon.png" alt="cart icon">
+                                <span class="cart-badge">0</span>
+                            </a>
+                            <a href="#" class="nav-icon">
+                                <img src="../images/icons/profile-icon.png" id="profileIcon" alt="profile icon">
+                            </a>
+                            <ul class="user-dropdown" id="userDropdown">
+                                <li><a href="#">View Profile</a></li>
+                                <li><a href="#" id="logoutButton">Logout</a></li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!--collapsible menu-->
@@ -49,18 +72,17 @@
                     <li><a href="#" class="link">All</a></li>
                     <li class="dropdown">
                         <a href="#" class="link">Sofas
-                            <img src="images/icons/dropdown-icon.png" alt="dropdown button">
+                            <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Fabric Sofas</a></li>
                             <li><a href="#">Leather Sofas</a></li>
                             <li><a href="#">Metal Sofas</a></li>
-                            <li><a href="#">Fabric Sofas</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="link">Tables
-                            <img src="images/icons/dropdown-icon.png" alt="dropdown button">
+                            <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Dining Tables</a></li>
@@ -71,7 +93,7 @@
                     </li>
                     <li class="dropdown">
                         <a href="#" class="link">Chairs
-                            <img src="images/icons/dropdown-icon.png" alt="dropdown button">
+                            <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Dining Chairs</a></li>
@@ -82,7 +104,7 @@
                     </li>
                     <li class="dropdown">
                         <a href="#" class="link">Beds
-                            <img src="images/icons/dropdown-icon.png" alt="dropdown button">
+                            <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Bed Frames</a></li>
@@ -91,7 +113,7 @@
                     </li>
                     <li class="dropdown">
                         <a href="#" class="link">Decors
-                            <img src="images/icons/dropdown-icon.png" alt="dropdown button">
+                            <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Accessories</a></li>
@@ -102,7 +124,7 @@
                     </li>
                     <li class="dropdown">
                         <a href="#" class="link">Spaces
-                            <img src="images/icons/dropdown-icon.png" alt="dropdown button">
+                            <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Living Room</a></li>
@@ -115,9 +137,8 @@
             </div>
         </nav>
     </header>
-
     <main class="showroom-page">
-        <!--hero section-->
+        <!--hero section with interactive hotspots-->
         <section class="hero-section">
             <h1>Home office</h1>
             <p>A place of clarity and encouraging focus.</p>
@@ -244,94 +265,6 @@
             </div>
         </section>
 
-        <!--series section-->
-        <section class="series-section">
-            <h2>SERIES FOR GAMING, STUDYING AND WORKING</h2>
-            <div class="series-grid">
-                <div class="series-card">
-                    <img src="images/products/series-1.jpg" alt="Gaming series">
-                    <div class="series-info">
-                        <h3>Gaming Series</h3>
-                        <p>Professional gaming setup with ergonomic design</p>
-                        <button class="series-btn">Shop now</button>
-                    </div>
-                </div>
-                <div class="series-card">
-                    <img src="images/products/series-2.jpg" alt="Study series">
-                    <div class="series-info">
-                        <h3>Study Series</h3>
-                        <p>Focused workspace for maximum productivity</p>
-                        <button class="series-btn">Shop now</button>
-                    </div>
-                </div>
-                <div class="series-card">
-                    <img src="images/products/series-3.jpg" alt="Work series">
-                    <div class="series-info">
-                        <h3>Work Series</h3>
-                        <p>Professional home office solutions</p>
-                        <button class="series-btn">Shop now</button>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!--work lamps section-->
-        <section class="work-lamps">
-            <h2>WORK LAMPS: YOUR PERFECT WORKMATE</h2>
-            <div class="lamps-grid">
-                <div class="lamp-card">
-                    <img src="images/products/lamp-1.jpg" alt="Modern desk lamp">
-                    <div class="lamp-info">
-                        <h3>Modern LED Desk Lamp</h3>
-                        <p>$89</p>
-                    </div>
-                </div>
-                <div class="lamp-card">
-                    <img src="images/products/lamp-2.jpg" alt="Classic desk lamp">
-                    <div class="lamp-info">
-                        <h3>Classic Desk Lamp</h3>
-                        <p>$69</p>
-                    </div>
-                </div>
-                <div class="lamp-card">
-                    <img src="images/products/lamp-3.jpg" alt="Adjustable lamp">
-                    <div class="lamp-info">
-                        <h3>Adjustable Work Lamp</h3>
-                        <p>$99</p>
-                    </div>
-                </div>
-                <div class="lamp-card">
-                    <img src="images/products/lamp-4.jpg" alt="Smart lamp">
-                    <div class="lamp-info">
-                        <h3>Smart LED Lamp</h3>
-                        <p>$129</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!--better workspace guide-->
-        <section class="workspace-guide">
-            <h2>HOW TO GET A BETTER WORKSPACE AT HOME</h2>
-            <div class="guide-grid">
-                <div class="guide-card">
-                    <img src="images/showroom/guide-1.jpg" alt="Ergonomic setup">
-                    <h3>Ergonomic Setup</h3>
-                    <p>Create a comfortable and healthy workspace</p>
-                </div>
-                <div class="guide-card">
-                    <img src="images/showroom/guide-2.jpg" alt="Lighting tips">
-                    <h3>Perfect Lighting</h3>
-                    <p>Optimize your workspace lighting</p>
-                </div>
-                <div class="guide-card">
-                    <img src="images/showroom/guide-3.jpg" alt="Organization tips">
-                    <h3>Smart Organization</h3>
-                    <p>Keep your workspace tidy and efficient</p>
-                </div>
-            </div>
-        </section>
-
         <!--benefits section-->
         <section class="benefits">
             <div class="benefits-grid">
@@ -352,20 +285,20 @@
                 </div>
             </div>
         </section>
-
-        <!--footer section-->
+    </main>
+    <!--footer section-->
         <footer class="footer">
             <!--footer left section-->
             <div class="footer-left">
                 <div class="footer-logo">
-                    <img src="images/others/mokesell-logo-footer.png" alt="mokesell logo">
+                    <img src="../images/others/mokesell-logo-footer.png" alt="mokesell logo">
                 </div>
                 <p>Where Style Meets Comfort - Redefining Your Furniture Journey.</p>
                 <!--social links-->
                 <div class="social-icons">
-                    <a href="#" target="_blank" class="icon"><img src="images/icons/instagram-icon.png" alt="Instagram"></a>
-                    <a href="#" target="_blank" class="icon"><img src="images/icons/twitter-icon.png" alt="Twitter"></a>
-                    <a href="#" target="_blank" class="icon"><img src="images/icons/facebook-icon.png" alt="Facebook"></a>
+                    <a href="#" target="_blank" class="icon"><img src="../images/icons/instagram-icon.png" alt="Instagram"></a>
+                    <a href="#" target="_blank" class="icon"><img src="../images/icons/twitter-icon.png" alt="Twitter"></a>
+                    <a href="#" target="_blank" class="icon"><img src="../images/icons/facebook-icon.png" alt="Facebook"></a>
                 </div>
                 <!--copyright-->
                 <div class="copyright">
@@ -406,7 +339,58 @@
             </div>
         </footer>
     </main>
-
-    <script src="js/showroom.js"></script>
+    <!--registration popup section-->
+    <div id="popupOverlay" class="popup-overlay">s</div>
+    <div id="registrationPopup" class="popup">
+        <div class="popup-container">
+            <div class="popup-logo">
+                <img src="../images/others/mokesell-logo-popup.png">
+            </div>
+            <span class="close-button">X</span>
+            <div class="popup-header">
+                <button id="signupTab" class="active">Sign up</button>
+                <button id="signinTab">Sign in</button>
+            </div>
+            <div class="popup-content">
+                <div class="popup-fields">
+                    <!--sign up form-->
+                    <div id="signupForm" class="form active">
+                        <label for="signupUsername">Username</label>
+                        <input type="text" id="signupUsername" placeholder="Username">
+                        <label for="signupEmail">Email Address</label>
+                        <input type="email" id="signupEmail" placeholder="Email Address">
+                        <label for="signupPassword">Password</label>
+                        <input type="password" id="signupPassword" placeholder="Password">
+                        <button id="signupButton">SIGN UP</button>
+                    </div>
+                    <!--sign in form-->
+                    <div id="signinForm" class="form">
+                        <label for="signinUsername">Username</label>
+                        <input type="text" id="signinUsername" placeholder="Username">
+                        <label for="signinPassword">Password</label>
+                        <input type="password" id="signinPassword" placeholder="Password">
+                        <button id="signinButton">SIGN IN</button>
+                    </div>
+                    <!--social login-->
+                    <div class="social-login">
+                        <p>OR</p>
+                        <button>Continue with Google</button>
+                        <button>Continue with Facebook</button>
+                    </div>
+                </div>
+                <!--discount code image-->
+                <div class="discount-code">
+                    <img src="../images/others/popup-discount-code.png" alt="discount code image">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--external libraries-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.14/lottie.min.js"></script>
+    
+    <!--custom javascript-->
+    <script src="../js/registration.js"></script>
+    <script src="../js/showroom.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
