made changes to colour scheme and changed the images

--- a/html/listing.html
+++ b/html/listing.html
@@ -168,7 +168,7 @@
                 </div>
                 <div class="listing-right">
                     <!-- 2.Choose Category-->
-                    <div class="section">
+                    <div class="listing-section">
                         <h2>2. Choose category</h2>
                         <select id="category">
                             <option value="">Select a category</option>
@@ -180,7 +180,7 @@
                         </select>
                     </div>
                     <!--3. Select Condition-->
-                    <div class="section">
+                    <div class="listing-section">
                         <h2>3. Select Condition</h2>
                         <select id="conditionOptions">
                             <option value ="">Select a condition</option>
@@ -192,7 +192,7 @@
                         </select>
                     </div>
                     <!--4. Item Details-->
-                    <div class="section">
+                    <div class="listing-section">
                         <h2>4. Item details</h2>
                         <label>Title</label>
                         <input type="text" id="title" placeholder="Title">
@@ -210,7 +210,7 @@
                         <textarea id="description" placeholder="Description"></textarea>
                     </div>
                     <!--5. Set Price-->
-                    <div class="section">
+                    <div class="listing-section">
                         <h2>5. Set price</h2>
                         <label>Price</label>
                         <select id="currency">
@@ -228,7 +228,7 @@
             <!--footer left section-->
             <div class="footer-left">
                 <div class="footer-logo">
-                    <img src="../images/others/mokesell-logo-footer.png" alt="mokesell logo">
+                    <img src="../images/others/mokesell-logo.png" alt="mokesell logo">
                 </div>
                 <p>Where Style Meets Comfort - Redefining Your Furniture Journey.</p>
                 <!--social links-->
