--- a/html/showroom.html
+++ b/html/showroom.html
@@ -139,10 +139,10 @@
     </header>
     <main class="showroom-page">
         <!--hero section with interactive hotspots-->
-        <section class="hero-section">
+        <section class="showroom-hero-section">
             <h1>Home office</h1>
             <p>A place of clarity and encouraging focus.</p>
-            <div class="hero-image">
+            <div class="showroom-hero-image">
                 <img src="images/showroom/office-main.jpg" alt="Home office setup">
                 <!--interactive hotspots-->
                 <div class="hotspot" style="top: 45%; left: 25%;" data-product="Office Chair">
@@ -291,7 +291,7 @@
             <!--footer left section-->
             <div class="footer-left">
                 <div class="footer-logo">
-                    <img src="../images/others/mokesell-logo-footer.png" alt="mokesell logo">
+                    <img src="../images/others/mokesell-logo.png" alt="mokesell logo">
                 </div>
                 <p>Where Style Meets Comfort - Redefining Your Furniture Journey.</p>
                 <!--social links-->
