--- a/html/game.html
+++ b/html/game.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-    <title>Product - MokeSell</title>
+    <title>Game - MokeSell</title>
     <!--normalize.css-->
     <link rel="stylesheet" href="../css/normalize.css">
     <!--custom styles-->
