continued with responsive

--- a/html/game.html
+++ b/html/game.html
@@ -149,8 +149,7 @@
                     <div class="game-step">
                         <p id="step-text">STEP 1: EARN POINTS</p>
                         <div id="step-description-container">
-                            <p id="step-description">Play the Game: Earn points by playing our game!</p>
-                            <p id="step-description">Shop More: Earn additional points with each purchase.</p>
+                            <p id="step-description">Play the Game: Have fun and earn points by playing our game!</p>
                         </div>
                     </div>
                     <button id="next-step"><img src="../images/icons/next-icon.png" alt="next step button"></button>
