--- a/html/product-details.html
+++ b/html/product-details.html
@@ -355,7 +355,15 @@
             <button class="remove-item" aria-label="Remove item">×</button>
         </div>
     </template>
-
+    <!--fixed buttons section-->
+    <div class="fixed-buttons">
+        <a href="../html/game.html">
+            <button class="fixed-button"><img src="../images/icons/game-icon.png" alt="game-icon"></button>
+        </a>
+        <a href="../html/listing.html">
+            <button class="fixed-button"><img src="../images/icons/listing-icon.png" alt="listing-icon"></button>
+        </a>
+    </div>
     <!--registration popup section-->
     <div id="popupOverlay" class="popup-overlay">s</div>
     <div id="registrationPopup" class="popup">
