--- a/html/contact.html
+++ b/html/contact.html
@@ -390,6 +390,15 @@
             </div>
         </footer>
     </main>
+    <!--fixed buttons section-->
+    <div class="fixed-buttons">
+        <a href="../html/game.html">
+            <button class="fixed-button"><img src="../images/icons/game-icon.png" alt="game-icon"></button>
+        </a>
+        <a href="../html/listing.html">
+            <button class="fixed-button"><img src="../images/icons/listing-icon.png" alt="listing-icon"></button>
+        </a>
+    </div>
     <!--registration popup section-->
     <div id="popupOverlay" class="popup-overlay">s</div>
     <div id="registrationPopup" class="popup">
