--- a/html/order-confirmation.html
+++ b/html/order-confirmation.html
@@ -41,7 +41,6 @@
                         <button class="auth-button" id="navSignUp">Sign up</button>
                         <a href="#" class="nav-icon">
                             <img src="../images/icons/cart-icon.png" alt="cart icon">
-                            <span class="cart-badge">0</span>
                         </a>
                     </div>
                     <div id="userNav">
@@ -51,7 +50,6 @@
                             </a>
                             <a href="#" class="nav-icon">
                                 <img src="../images/icons/cart-icon.png" alt="cart icon">
-                                <span class="cart-badge">0</span>
                             </a>
                             <a href="#" class="nav-icon">
                                 <img src="../images/icons/profile-icon.png" id="profileIcon" alt="profile icon">
@@ -64,75 +62,75 @@
                     </div>
                 </div>
             </div>
-            <!--collapsible menu-->
-            <div class="nav-categories">
-                <ul class="nav-links">
-                    <li><a href="#" class="link">All</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="link">Sofas
-                            <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Fabric Sofas</a></li>
-                            <li><a href="#">Leather Sofas</a></li>
-                            <li><a href="#">Metal Sofas</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="link">Tables
-                            <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Dining Tables</a></li>
-                            <li><a href="#">Side Tables</a></li>
-                            <li><a href="#">Coffee Tables</a></li>
-                            <li><a href="#">Study Tables</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="link">Chairs
-                            <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Dining Chairs</a></li>
-                            <li><a href="#">Stools</a></li>
-                            <li><a href="#">Benches</a></li>
-                            <li><a href="#">Office Chairs</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="link">Beds
-                            <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Bed Frames</a></li>
-                            <li><a href="#">Mattresses</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="link">Decors
-                            <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Accessories</a></li>
-                            <li><a href="#">Lamps</a></li>
-                            <li><a href="#">Mirrors</a></li>
-                            <li><a href="#">Pillow Cushions</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="link">Spaces
-                            <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Living Room</a></li>
-                            <li><a href="#">Dining Room</a></li>
-                            <li><a href="#">Bed Room</a></li>
-                            <li><a href="#">Study Room</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+           <!--collapsible menu-->
+           <div class="nav-categories">
+            <ul class="nav-links">
+                <li><a href="../html/products.html" class="link">All</a></li>
+                <li class="dropdown">
+                    <a href="../html/products.html?category=Sofas" class="link">Sofas
+                        <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="../html/products.html?category=Sofas&subcategory=Fabric Sofas">Fabric Sofas</a></li>
+                        <li><a href="../html/products.html?category=Sofas&subcategory=Leather Sofas">Leather Sofas</a></li>
+                        <li><a href="../html/products.html?category=Sofas&subcategory=Metal Sofas">Metal Sofas</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="../html/products.html?category=Tables" class="link">Tables
+                        <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="../html/products.html?category=Tables&subcategory=Dining Tables">Dining Tables</a></li>
+                        <li><a href="../html/products.html?category=Tables&subcategory=Side Tables">Side Tables</a></li>
+                        <li><a href="../html/products.html?category=Tables&subcategory=CoffeeTables">Coffee Tables</a></li>
+                        <li><a href="../html/products.html?category=Tables&subcategory=Study Tables">Study Tables</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="../html/products.html?category=Chairs" class="link">Chairs
+                        <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="../html/products.html?category=Chairs&subcategory=Dining Chairs">Dining Chairs</a></li>
+                        <li><a href="../html/products.html?category=Chairs&subcategory=Stools">Stools</a></li>
+                        <li><a href="../html/products.html?category=Chairs&subcategory=Benches">Benches</a></li>
+                        <li><a href="../html/products.html?category=Chairs&subcategory=Office Chairs">Office Chairs</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="../html/products.html?category=Beds" class="link">Beds
+                        <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="../html/products.html?category=Beds&subcategory=Bed Frames">Bed Frames</a></li>
+                        <li><a href="../html/products.html?category=Beds&subcategory=Mattresses">Mattresses</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="../html/products.html?category=Decors" class="link">Decors
+                        <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="../html/products.html?category=Decors&subcategory=Accessories">Accessories</a></li>
+                        <li><a href="../html/products.html?category=Decors&subcategory=Lamps">Lamps</a></li>
+                        <li><a href="../html/products.html?category=Decors&subcategory=Mirrors">Mirrors</a></li>
+                        <li><a href="../html/products.html?category=Decors&subcategory=Pillow Cushions">Pillow Cushions</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="../html/showroom.html" class="link">Spaces
+                        <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="../html/showroom.html">Living Room</a></li>
+                        <li><a href="../html/showroom.html">Dining Room</a></li>
+                        <li><a href="../html/showroom.html">Bed Room</a></li>
+                        <li><a href="../html/showroom.html">Study Room</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
         </nav>
     </header>
     <main>
@@ -318,6 +316,7 @@
     
     <!--custom javascript-->
     <script src="../js/registration.js"></script>
+    <script src="../js/products.js"></script>
     <script src="../js/order-confirmation.js"></script>
     <script src="../js/script.js"></script>
 </body>
