added search function, changed home page hero images

--- a/html/order-confirmation.html
+++ b/html/order-confirmation.html
@@ -23,7 +23,7 @@
                 <button class="menu-btn" id="openSidebarButton">☰</button>
                 <!--logo-->
                 <div class="logo">
-                    <a href="index.html"><img src="../images/others/mokesell-logo.png" alt="mokesell logo"></a>
+                    <a href="../index.html"><img src="../images/others/mokesell-logo.png" alt="mokesell logo"></a>
                 </div>
                 <!--search bar-->
                 <div class="search-container">
