--- a/html/game.html
+++ b/html/game.html
@@ -24,7 +24,7 @@
                 <button class="menu-btn" id="openSidebarButton">☰</button>
                 <!--logo-->
                 <div class="logo">
-                    <a href="index.html"><img src="../images/others/mokesell-logo.png" alt="mokesell logo"></a>
+                    <a href="../index.html"><img src="../images/others/mokesell-logo.png" alt="mokesell logo"></a>
                 </div>
                 <!--search bar-->
                 <div class="search-container">
@@ -297,5 +297,6 @@
     <script src="../js/registration.js"></script>
     <script src="../js/products.js"></script>
     <script src="../js/game.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
