--- a/html/product-details.html
+++ b/html/product-details.html
@@ -24,7 +24,7 @@
                 <button class="menu-btn" id="openSidebarButton">☰</button>
                 <!--logo-->
                 <div class="logo">
-                    <a href="index.html"><img src="../images/others/mokesell-logo.png" alt="mokesell logo"></a>
+                    <a href="../index.html"><img src="../images/others/mokesell-logo.png" alt="mokesell logo"></a>
                 </div>
                 <!--search bar-->
                 <div class="search-container">
@@ -417,6 +417,6 @@
     <script src="../js/products.js"></script>
     <script src="../js/product-details.js"></script>
     <script src="../js/script.js"></script>
-    <!--<script src="../js/cart-manager.js"></script>-->
+    <script src="../js/cart-manager.js"></script>
 </body>
 </html>
