--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <h2>TOP CATEGORIES</h2>
             <div class="category-grid">
                 <div class="category">
-                    <a href="#">
+                    <a href="../html/products.html?category=Sofas">
                         <img src="images/categories/sofa-category.png" alt="Sofas">
                         <div class="category-name">
                             Sofas
@@ -162,7 +162,7 @@
                     </a>
                 </div>
                 <div class="category">
-                    <a href="#">
+                    <a href="../html/products.html?category=Tables">
                         <img src="images/categories/table-category.png" alt="Tables">
                         <div class="category-name">
                             Tables
@@ -171,7 +171,7 @@
                     </a>
                 </div>
                 <div class="category">
-                    <a href="#">
+                    <a href="../html/products.html?category=Chairs">
                         <img src="images/categories/chair-category.png" alt="Chairs">
                         <div class="category-name">
                             Chairs
@@ -180,7 +180,7 @@
                     </a>
                 </div>
                 <div class="category">
-                    <a href="#">
+                    <a href="../html/products.html?category=Beds">
                         <img src="images/categories/bed-category.png" alt="Beds">
                         <div class="category-name">
                             Beds
@@ -189,7 +189,7 @@
                     </a>
                 </div>
                 <div class="category">
-                    <a href="#">
+                    <a href="../html/products.html?category=Decors">
                         <img src="images/categories/decor-category.png" alt="Decors">
                         <div class="category-name">
                             Decors
