linked up links

--- a/html/contact.html
+++ b/html/contact.html
@@ -37,30 +37,30 @@
                 </div>
                 <!--right buttons--> 
                 <div class="nav-buttons">
-                    <a href="#">
+                    <a href="../html/listing.html">
                         <button class="sell-button">Sell an item</button>
                     </a>
                     <div id="guestNav">
                         <button class="auth-button" id="navSignIn">Sign in</button>
                         <button class="auth-button" id="navSignUp">Sign up</button>
-                        <a href="#" class="nav-icon">
+                        <div class="nav-icon">
                             <img src="../images/icons/cart-icon.png" alt="cart icon">
-                        </a>
+                        </div>
                     </div>
                     <div id="userNav">
                         <div class="profile-container">
                             <a href="#" class="nav-icon">
                                 <img src="../images/icons/favourites-icon.png" id="favouritesIcon" alt="favourites icon">
                             </a>
-                            <a href="#" class="nav-icon">
+                            <div class="nav-icon">
                                 <img src="../images/icons/cart-icon.png" alt="cart icon">
-                            </a>
-                            <a href="#" class="nav-icon">
+                            </div>
+                            <div class="nav-icon">
                                 <img src="../images/icons/profile-icon.png" id="profileIcon" alt="profile icon">
-                            </a>
+                            </div>
                             <ul class="user-dropdown" id="userDropdown">
                                 <li><a href="#">View Profile</a></li>
-                                <li><a href="#" id="logoutButton">Logout</a></li>
+                                <li><div id="logoutButton">Logout</div></li>
                             </ul>
                         </div>
                     </div>
@@ -360,8 +360,8 @@
                 <div class="footer-content">
                     <h4>Shop</h4>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html">Shop All</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../html/products.html">Shop All</a></li>
                         <li><a href="#">New Arrivals</a></li>
                         <li><a href="#">Second-Hand Furniture</a></li>
                     </ul>
@@ -370,9 +370,9 @@
                 <div class="footer-content">
                     <h4>Discover</h4>
                     <ul>
-                        <li><a href="#">Games and Rewards</a></li>
-                        <li><a href="#">How it Works</a></li>
-                        <li><a href="#">Showrooms</a></li>
+                        <li><a href="../html/game.html">Games and Rewards</a></li>
+                        <li><a href="../html/game.html">How it Works</a></li>
+                        <li><a href="../html/showroom.html">Showrooms</a></li>
                     </ul>
                 </div>
                 <!--support section-->
@@ -380,7 +380,7 @@
                     <h4>Support</h4>
                     <ul>
                         <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="../html/contact.html">Contact Us</a></li>
                         <li><a href="#">Terms and Conditions</a></li>
                         <li><a href="#">Return and Exchange</a></li>
                     </ul>
