--- a/index.html
+++ b/index.html
@@ -40,24 +40,24 @@
                     <div id="guestNav">
                         <button class="auth-button" id="navSignIn">Sign in</button>
                         <button class="auth-button" id="navSignUp">Sign up</button>
-                        <a href="#" class="nav-icon">
+                        <div class="nav-icon">
                             <img src="images/icons/cart-icon.png" alt="cart icon">
-                        </a>
+                        </div>
                     </div>
                     <div id="userNav">
                         <div class="profile-container">
                             <a href="#" class="nav-icon">
                                 <img src="images/icons/favourites-icon.png" id="favouritesIcon" alt="favourites icon">
                             </a>
-                            <a href="" class="nav-icon">
+                            <div class="nav-icon">
                                 <img src="images/icons/cart-icon.png" alt="cart icon">
-                            </a>
-                            <a href="#" class="nav-icon">
+                            </div>
+                            <div class="nav-icon">
                                 <img src="images/icons/profile-icon.png" id="profileIcon" alt="profile icon">
-                            </a>
+                            </div>
                             <ul class="user-dropdown" id="userDropdown">
                                 <li><a href="#">View Profile</a></li>
-                                <li><a href="#" id="logoutButton">Logout</a></li>
+                                <li><div id="logoutButton">Logout</div></li>
                             </ul>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
             <div class="hero-text">
                 <h1>DISCOVER YOUR DREAM ROOM</h1>
                 <p>Your journey to a beautiful home begins here.</p>
-                <a href="#">
+                <a href="html/showroom.html">
                     <button class="hero-button">SEE OUR SPACES</button>
                 <a>
             </div>
@@ -231,14 +231,14 @@
             <div class="list-listings">
                 <h3>Give your furniture a new home.</h3>
                 <p>Sell your pre-loved items easily.</p>
-                <a href="#">
+                <a href="html/listing.html">
                     <button>LIST YOUR ITEM</button>
                 </a>
             </div>
             <div class="browse-listings">
                 <h3>Find treasures for less.</h3>
                 <p>Quality second-hand furniture at great prices.</p>
-                <a href="#">
+                <a href="html/products.html">
                     <button>BROWSE LISTINGS</button>
                 </a>
             </div>
@@ -291,7 +291,7 @@
                     <h4>Shop</h4>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html">Shop All</a></li>
+                        <li><a href="html/products.html">Shop All</a></li>
                         <li><a href="#">New Arrivals</a></li>
                         <li><a href="#">Second-Hand Furniture</a></li>
                     </ul>
@@ -300,9 +300,9 @@
                 <div class="footer-content">
                     <h4>Discover</h4>
                     <ul>
-                        <li><a href="#">Games and Rewards</a></li>
-                        <li><a href="#">How it Works</a></li>
-                        <li><a href="#">Showrooms</a></li>
+                        <li><a href="html/game.html">Games and Rewards</a></li>
+                        <li><a href="html/game.html">How it Works</a></li>
+                        <li><a href="html/showroom.html">Showrooms</a></li>
                     </ul>
                 </div>
                 <!--support section-->
@@ -310,7 +310,7 @@
                     <h4>Support</h4>
                     <ul>
                         <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="html/contact.html">Contact Us</a></li>
                         <li><a href="#">Terms and Conditions</a></li>
                         <li><a href="#">Return and Exchange</a></li>
                     </ul>
