fixed path errors

--- a/html/game.html
+++ b/html/game.html
@@ -40,7 +40,7 @@
                     <div id="guestNav">
                         <button class="auth-button" id="navSignIn">Sign in</button>
                         <button class="auth-button" id="navSignUp">Sign up</button>
-                        <div lass="nav-icon">
+                        <div class="nav-icon">
                             <img src="../images/icons/cart-icon.png" alt="cart icon">
                         </div>
                     </div>
