--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </li>
                     <li class="dropdown">
                         <a href="../html/products.html?category=Tables" class="link">Tables
-                            <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
+                            <img src="images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="../html/products.html?category=Tables&subcategory=Dining Tables">Dining Tables</a></li>
@@ -90,7 +90,7 @@
                     </li>
                     <li class="dropdown">
                         <a href="../html/products.html?category=Chairs" class="link">Chairs
-                            <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
+                            <img src="images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="../html/products.html?category=Chairs&subcategory=Dining Chairs">Dining Chairs</a></li>
@@ -101,7 +101,7 @@
                     </li>
                     <li class="dropdown">
                         <a href="../html/products.html?category=Beds" class="link">Beds
-                            <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
+                            <img src="images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="../html/products.html?category=Beds&subcategory=Bed Frames">Bed Frames</a></li>
