--- a/index.html
+++ b/index.html
@@ -68,55 +68,55 @@
                 <ul class="nav-links">
                     <li><a href="html/products.html" class="link">All</a></li>
                     <li class="dropdown">
-                        <a href="../html/products.html?category=Sofas" class="link">Sofas
+                        <a href="html/products.html?category=Sofas" class="link">Sofas
                             <img src="images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="../html/products.html?category=Sofas&subcategory=Fabric Sofas">Fabric Sofas</a></li>
-                            <li><a href="../html/products.html?category=Sofas&subcategory=Leather Sofas">Leather Sofas</a></li>
-                            <li><a href="../html/products.html?category=Sofas&subcategory=Metal Sofas">Metal Sofas</a></li>
+                            <li><a href="html/products.html?category=Sofas&subcategory=Fabric Sofas">Fabric Sofas</a></li>
+                            <li><a href="html/products.html?category=Sofas&subcategory=Leather Sofas">Leather Sofas</a></li>
+                            <li><a href="html/products.html?category=Sofas&subcategory=Metal Sofas">Metal Sofas</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="../html/products.html?category=Tables" class="link">Tables
+                        <a href="html/products.html?category=Tables" class="link">Tables
                             <img src="images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="../html/products.html?category=Tables&subcategory=Dining Tables">Dining Tables</a></li>
-                            <li><a href="../html/products.html?category=Tables&subcategory=Side Tables">Side Tables</a></li>
-                            <li><a href="../html/products.html?category=Tables&subcategory=CoffeeTables">Coffee Tables</a></li>
-                            <li><a href="../html/products.html?category=Tables&subcategory=Study Tables">Study Tables</a></li>
+                            <li><a href="html/products.html?category=Tables&subcategory=Dining Tables">Dining Tables</a></li>
+                            <li><a href="html/products.html?category=Tables&subcategory=Side Tables">Side Tables</a></li>
+                            <li><a href="html/products.html?category=Tables&subcategory=CoffeeTables">Coffee Tables</a></li>
+                            <li><a href="html/products.html?category=Tables&subcategory=Study Tables">Study Tables</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="../html/products.html?category=Chairs" class="link">Chairs
+                        <a href="html/products.html?category=Chairs" class="link">Chairs
                             <img src="images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="../html/products.html?category=Chairs&subcategory=Dining Chairs">Dining Chairs</a></li>
-                            <li><a href="../html/products.html?category=Chairs&subcategory=Stools">Stools</a></li>
-                            <li><a href="../html/products.html?category=Chairs&subcategory=Benches">Benches</a></li>
-                            <li><a href="../html/products.html?category=Chairs&subcategory=Office Chairs">Office Chairs</a></li>
+                            <li><a href="html/products.html?category=Chairs&subcategory=Dining Chairs">Dining Chairs</a></li>
+                            <li><a href="html/products.html?category=Chairs&subcategory=Stools">Stools</a></li>
+                            <li><a href="html/products.html?category=Chairs&subcategory=Benches">Benches</a></li>
+                            <li><a href="html/products.html?category=Chairs&subcategory=Office Chairs">Office Chairs</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="../html/products.html?category=Beds" class="link">Beds
+                        <a href="html/products.html?category=Beds" class="link">Beds
                             <img src="images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="../html/products.html?category=Beds&subcategory=Bed Frames">Bed Frames</a></li>
-                            <li><a href="../html/products.html?category=Beds&subcategory=Mattresses">Mattresses</a></li>
+                            <li><a href="html/products.html?category=Beds&subcategory=Bed Frames">Bed Frames</a></li>
+                            <li><a href="html/products.html?category=Beds&subcategory=Mattresses">Mattresses</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="../html/products.html?category=Decors" class="link">Decors
+                        <a href="html/products.html?category=Decors" class="link">Decors
                             <img src="images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="../html/products.html?category=Decors&subcategory=Accessories">Accessories</a></li>
-                            <li><a href="../html/products.html?category=Decors&subcategory=Lamps">Lamps</a></li>
-                            <li><a href="../html/products.html?category=Decors&subcategory=Mirrors">Mirrors</a></li>
-                            <li><a href="../html/products.html?category=Decors&subcategory=Pillow Cushions">Pillow Cushions</a></li>
+                            <li><a href="html/products.html?category=Decors&subcategory=Accessories">Accessories</a></li>
+                            <li><a href="html/products.html?category=Decors&subcategory=Lamps">Lamps</a></li>
+                            <li><a href="html/products.html?category=Decors&subcategory=Mirrors">Mirrors</a></li>
+                            <li><a href="html/products.html?category=Decors&subcategory=Pillow Cushions">Pillow Cushions</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -153,7 +153,7 @@
             <h2>TOP CATEGORIES</h2>
             <div class="category-grid">
                 <div class="category">
-                    <a href="../html/products.html?category=Sofas">
+                    <a href="html/products.html?category=Sofas">
                         <img src="images/categories/sofa-category.png" alt="Sofas">
                         <div class="category-name">
                             Sofas
@@ -162,7 +162,7 @@
                     </a>
                 </div>
                 <div class="category">
-                    <a href="../html/products.html?category=Tables">
+                    <a href="html/products.html?category=Tables">
                         <img src="images/categories/table-category.png" alt="Tables">
                         <div class="category-name">
                             Tables
@@ -171,7 +171,7 @@
                     </a>
                 </div>
                 <div class="category">
-                    <a href="../html/products.html?category=Chairs">
+                    <a href="html/products.html?category=Chairs">
                         <img src="images/categories/chair-category.png" alt="Chairs">
                         <div class="category-name">
                             Chairs
@@ -180,7 +180,7 @@
                     </a>
                 </div>
                 <div class="category">
-                    <a href="../html/products.html?category=Beds">
+                    <a href="html/products.html?category=Beds">
                         <img src="images/categories/bed-category.png" alt="Beds">
                         <div class="category-name">
                             Beds
@@ -189,7 +189,7 @@
                     </a>
                 </div>
                 <div class="category">
-                    <a href="../html/products.html?category=Decors">
+                    <a href="html/products.html?category=Decors">
                         <img src="images/categories/decor-category.png" alt="Decors">
                         <div class="category-name">
                             Decors
